# Niki-docAI

./: .cursorrules  .gitignore  MANIFEST.in  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  README_zh.md  _AI.md  _ARCH.md  _DATA.md  _DEPS.md  _DOGFOOD.md  _GLOSSARY.md  _GUIDE.md  _MAP.md  _MEMORY.md  _NEXT.md  _RULES.md  _STATS.md  _STATUS.md  _STATUS_NEW.md  _SYMBOLS.md  _SYNTAX.md  _TECH.md  debug_cpp.py  debug_env.py  debug_scanner.py  debug_symbols.py  install.ps1  install.sh  ndoc.ps1  ndoc.spec  ndoc.toml  ndoc_entry.spec  pyproject.toml  requirements.txt  setup.py  symbols_log.txt  test_enhanced_doc.py  test_python_fix.py  (+1 more)
.github/workflows/: release.yml
.ndoc/cache/: index.json  scan_cache.db-shm  scan_cache.db-wal  scan_cache.json
.ndoc/vectordb/: chroma.sqlite3
docs/: _AI.md
docs/adr/: 001_ecs_plugin_architecture.md  _AI.md
editors/: _AI.md
editors/vscode/: .gitignore  .vscodeignore  README.md  _AI.md  package-lock.json  package.json  tsconfig.json
ndoc_legacy/: .gitignore  Dockerfile  _AI.md  _ARCH.md  _GLOSSARY.md  _MAP.md  _MEMORY.md  _RULES.md  _SYNTAX.md  _TECH.md  ndoc.toml
ndoc_legacy/src/: _AI.md
ndoc_legacy/test/: _AI.md  (+1 more)
samples/: _AI.md  sample_csharp.cs
scripts/: _AI.md  add_context_marker.py  bootstrap.py  publish_release.ps1
src/: _AI.md
temp_build_dart/: _AI.md
tests/: _AI.md  benchmark_e2e.py  conftest.py  test_ast.py  test_capabilities.py  test_capability_flow.py  test_csharp_api.py  test_lsp_server.py  test_scanner.py
tools/: _AI.md
vendors/: _AI.md
vscode_extension/: _AI.md  package-lock.json  package.json
(+363 files in other folders)
