[project]
name = "niki_docai"
version = "0.1.0"
description = "Niki_docAI: Documentation and Toolchain for NikiDice"
authors = [
    {name = "TraeAI", email = "trae@example.com"},
]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.9"

[project.scripts]
ndoc = "ndoc.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
